fix spacing in contact section

--- a/index.css
+++ b/index.css
@@ -198,15 +198,7 @@ input[type=text], select, textarea {
 #contact{
   margin-top: -30px;
 }
-.contact-backgrount-white{
-  background-color: white;
-  display: flex;
-  padding:40px;
-}
-.contact-details{
-  padding-top: 110px;
-  padding-left: 110px;
-}
+
 .social-icons-footer li {
   overflow: hidden;
   padding-top: 20px;
